add change fixed background

--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ figure {
     height: 100%;
 }
 #fixed {
-    background-image: url('img/mac.png');
+    background-image: url('imgs/pan.jpg');
     position: fixed;
     display: block;
     top: 0;
